fix: Fixed form on mobile version

--- a/wp-content/themes/granite-ukraine/assets/scss/_contacts.scss
+++ b/wp-content/themes/granite-ukraine/assets/scss/_contacts.scss
@@ -22,6 +22,12 @@
             display: block;
             max-width: 60%;
             margin: 0 auto;
+            @include media-down(ms) {
+                max-width: 80%;
+            }
+            @include media-down(sm) {
+                max-width: 100%;
+            }
             & .form-wrapper {
                 margin-bottom: 16px;
                 .wpcf7-form-control-wrap {
